fixed spacing issue

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -60,6 +60,7 @@
 
 footer {
   display: none;
+  padding-left: 5px;
 }
 
 .active-link {
